| Bug #16842 | DD : Crash on drop logfile group after SR | ||
|---|---|---|---|
| Submitted: | 27 Jan 2006 14:12 | Modified: | 28 Jan 2006 14:02 |
| Reporter: | Jonas Oreland | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1.6 | OS: | |
| Assigned to: | Jonas Oreland | CPU Architecture: | Any |
[27 Jan 2006 14:12]
Jonas Oreland
[27 Jan 2006 14:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/1743
[27 Jan 2006 15:25]
Jonas Oreland
pushed into 5.1.6
[28 Jan 2006 14:02]
Jonas Oreland
since it's never released no need to document
