bug#16842 - ndb dd - drop logfile group crashed after SR